# routes/api/property.js
@@ -3,7 +3,7 @@ const router = express.Router();
 const propertyController = require('../../controllers/property.controller');
 
 router.get('/',propertyController.getProperty);
-router.get('/id',propertyController.getOneProperty);
+router.get('/:id',propertyController.getOneProperty);
 router.post('/',propertyController.createNewProperty);
 router.put('/:id',propertyController.updateProperty);
 router.delete('/:id',propertyController.deleteProperty);
